--- a/quant-ph-0601205/nonlocchar.tex
+++ b/quant-ph-0601205/nonlocchar.tex
@@ -112,7 +112,7 @@ follows from the requirement of locality.  For example, Bell writes that
 starts with a summary of the EPR argument \emph{from locality to}
 deterministic hidden variables.  But the commentators have almost
 universally reported that it begins with deterministic hidden
-variables.'' \cite[pg 157]{bell}
+variables'' \cite[pg 157]{bell}.
 \end{quote}
 Those in the second camp have either failed to understand the role of
 the EPR argument as part-one of Bell's two-part argument for
@@ -180,8 +180,8 @@ the death of the hidden-variables program.'' \cite{merminquote}
 
 In an interesting recent series of papers
 H. P. Stapp has questioned the reasoning behind this
-conclusion and presented arguments in support of the first camp.
-\cite{stapp:btwhv,stapp1,stapp2}
+conclusion and presented arguments in support of the first camp
+\cite{stapp:btwhv,stapp1,stapp2}.
 Stapp's re-thinking is based on his attempt to
 prove a \emph{stronger version} of Bell's Theorem which dispenses
 altogether with the assumption of hidden-variables.
@@ -222,7 +222,7 @@ pertains to Stapp's definition of locality, which definition William
 Unruh summarizes as follows:  ``the
 truth of a statement pertaining exclusively to possible events in
 region $R$ cannot depend on which free choice is to be made by the
-experimenter in region $L$.''  \cite{unruh}
+experimenter in region $L$''  \cite{unruh}.
 As Mermin has clarified, this definition encompasses
 two very different ``locality'' ideas:  first, that what
 an experimenter on one side chooses to measure can have no influence
@@ -254,7 +254,7 @@ accepting $S$ include statements explicitly pertaining to $L$.
 sense in which the meaning of $S$ includes implicit
 reference to region $L$ is
 made particularly clear in the essays of Shimony and
-Stein \cite{shimony,shimonystein}. )    As Mermin explains,
+Stein \cite{shimony,shimonystein}.)    As Mermin explains,
 Stapp's conclusion ``does not mean ... that a choice
   made [on the left] can influence events [on the right].  What it
   does mean is that \emph{a choice made [on the left] can influence
