--- a/quant-ph-0606084/quant-ph-0606084-psu.tex
+++ b/quant-ph-0606084/quant-ph-0606084-psu.tex
@@ -1,6 +1,6 @@
 
 
-\documentclass[aps,prc,onecolumn,12pt]{revtex4-2}
+\documentclass[aps,prc,onecolumn,12pt,nofootinbib]{revtex4-2}
 \usepackage{graphicx,amssymb}
 
 %\usepackage{amsmath,amsthm,amscd,amssymb}
@@ -51,7 +51,7 @@ bookmarksopenlevel=10
 \author{Travis Norsen}
 \affiliation{Marlboro College \\ Marlboro, VT  05344 \\ norsen@marlboro.edu}
 
-\date{\today}
+\date{9 Jun 2006}
 
 \begin{abstract}
 We discuss the role of counter-factual meaningfulness (a weaker
@@ -83,7 +83,7 @@ and hence a feature of nature itself, and (2) those who think that the
 results prove merely that non-locality is a necessary feature of any
 empirically viable theory of \emph{hidden variables} (HV -- or any theory
 containing a \emph{counter-factual definiteness} (CFD) property, or some
-other similar anti-orthodox or anti-Copenhagen character).
+other similar anti-orthodox or anti-Copenhagen character).%
 \footnote{Please note that here, and throughout this paper, we use the
   term ``locality'' to mean Bell's
   mathematically precise definition of relativistically local
