--- a/quant-ph-0601205/nonlocchar.tex
+++ b/quant-ph-0601205/nonlocchar.tex
@@ -2,7 +2,12 @@
 \usepackage{graphicx,amssymb}
 
 %\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[full]{textcomp}
+     \usepackage[sups,osf]{fbb} % osf (or tosf) for text, not math
+     \usepackage[scaled=.95]{cabin} % sans serif
+     \usepackage[varqu,varl]{inconsolata} % sans serif typewriter
+     \usepackage[libertine,bigdelims,vvarbb]{newtxmath} % bb from STIX
+     \usepackage[cal=boondoxo]{mathalfa} % mathcal
 \usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
 \linespread{1.05}
 \sloppy
@@ -49,7 +54,7 @@ bookmarksopenlevel=10
 \author{Travis Norsen}
 \affiliation{Marlboro College \\ Marlboro, VT  05344 \\ norsen@marlboro.edu}
 
-\date{\today}
+\date{18 Jul 2006}
 
 \begin{abstract}
 It is demonstrated that hidden variables of a certain type
