--- a/2003.03395/main.tex
+++ b/2003.03395/main.tex
@@ -15,7 +15,8 @@
 \date{6 Mar 2020}
 
 %\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[adobe-utopia]{mathdesign}
+\usepackage[T1]{fontenc}
 \usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
 \linespread{1.05}
 \sloppy
