--- a/1501.02691/1501.02691-psu.tex
+++ b/1501.02691/1501.02691-psu.tex
@@ -75,7 +75,7 @@ The story of Bell cannot be told without first describing the EPR argument. Inst
 There are three separate sites with Alice, Bob and Charley which share an entangled state of three spin-$\frac{1}{2}$ particles, the GHZ state:
 \begin{equation}
 \label{GHZ}
-|GHZ\rangle = {1\over \sqrt
+|\mathrm{GHZ}\rangle = {1\over \sqrt
   2}{\Large (}|{\uparrow}_z\rangle_A|{\uparrow}_z\rangle_B|{\uparrow}_z\rangle_C -
 |{\downarrow}_z\rangle_A|{\downarrow}_z\rangle_B|{\downarrow}_z\rangle_C{\Large
 )} .
