--- a/quant-ph-0606084/quant-ph-0606084-psu.tex
+++ b/quant-ph-0606084/quant-ph-0606084-psu.tex
@@ -5,6 +5,8 @@
 
 %\usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[noBBpl,sc]{mathpazo}
+
+\usepackage[T1]{fontenc}
 \usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
 \linespread{1.05}
 \sloppy
