--- a/0905.2562v3/review3.tex
+++ b/0905.2562v3/review3.tex
@@ -19,9 +19,14 @@ bookmarksopenlevel=10
 }
 \usepackage[noBBpl,sc]{mathpazo}
 \linespread{1.05}
-\usepackage[papersize={7.2in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
-\tolerance=2000
-\hbadness=2000
+\usepackage[papersize={7.2in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+\usepackage{microtype}
+
 \def\nn{\nonumber}
 % these include amsmath and that can cause trouble in older docs.
 \input{../helpers/cmrsum}
@@ -1321,7 +1326,11 @@ where $L_t=\sum_i (v_i-u_i)$ is the total length of the intervals. For a single 
 In this section we describe the Hamiltonian and correlators which can be used in a one dimensional lattice 
 to calculate numerically the entanglement entropy. The numerical results of the $c$ functions for a scalar and a Dirac field are compared with the analytical ones in figure \ref{pietro}, showing a perfect accord. 
 
+\medskip
+
 \noindent\textbf{Scalar}
+
+\medskip
 
 \noindent We take the lattice Hamiltonian for a real massive scalar as 
 \begin{equation}
@@ -1337,7 +1346,11 @@ m^2+2(1-\cos ( x))}}\,, \\
 \langle \pi_{n}\pi_{m}\rangle &=& \int_{-\pi}^{\pi}dx \frac{1}{4\pi}e^{ i x(m-n)}\sqrt{m^2+2(1-\cos ( x))}\,.
 \end{eqnarray}
 
+\medskip
+
 \noindent\textbf{Dirac fermions}
+
+\medskip
 
 \noindent We take the Hamiltonian for a Dirac fermion
 discretized on the lattice 
