--- a/2006.08609/Routledge_Bell_3.tex
+++ b/2006.08609/Routledge_Bell_3.tex
@@ -25,7 +25,7 @@
 \DeclareGraphicsRule{.tif}{png}{.png}{`convert #1 `dirname #1`/`basename #1 .tif`.png}
 \bibpunct{(}{)}{,}{a}{}{,}
 %\setlength{\parindent}{0pt}
-\setlength{\parskip}{0.5ex}
+\setlength{\parskip}{0pt}
  %\setlength{\parskip}{1cm plus4mm minus3mm}
 
 \usepackage{tikz}   %TikZ is required for this to work.  Make sure this exists before the next line
