--- a/2006.08609/Routledge_Bell_3.tex
+++ b/2006.08609/Routledge_Bell_3.tex
@@ -283,6 +283,10 @@ We will see that predetermined values and quantum predictions lead to a contradi
     \hline
 \end{tabular}
    }
+\bigskip
+\medskip
+\noindent
+
 To satisfy Prediction 1, different pairs of photons can choose exactly one of these eight assignments. If a pair does not choose among these eight, then it can violate experimental results. 
 
 The eight assignments can be put in four groups as indicated in the table. Let us label the four groups with features X, Y, Z, and W, which we mention again in \S3.  Now suppose we have  a large number of pairs of photons emitted from a collection of calcium atoms. (The larger the number, the closer empirical frequencies will approach the predicted percentages.) Assuming Locality, each pair must adopt one of the eight assignments listed above. Let $\alpha$ be the percentage of pairs that realizes either (1) or (2); $\beta$ be the percentage of pairs that realizes either (3) or (4); $\gamma$ be the percentage of pairs that realizes either (5) or (6); and $\delta$ be the percentage of pairs that realizes either (7) or (8). By the laws of arithmetic, 
