--- a/helpers/fixarxiv-fbb.tex
+++ b/helpers/fixarxiv-fbb.tex
@@ -1,9 +1,12 @@
-% math bold does not seem to work
+% some math bold does not seem to work.
+% using the bm package seems OK.
 \usepackage{fbb}
 \usepackage[libertine]{newtxmath}
 \usepackage[scaled=.95,type1]{cabin} % sans serif in style of Gill Sans
 \usepackage[varqu,varl]{zi4}% inconsolata typewriter
 \usepackage[T1]{fontenc}
+\usepackage{bm}
+
 \usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
 \linespread{1.05}
 \sloppy
