--- a/1807.06894/QM-def.tex
+++ b/1807.06894/QM-def.tex
@@ -1,69 +1,64 @@
-%\newcounter{comm}
-%\newenvironment{comment}%
-%{\addtocounter{comm}{1}\par\smaller[1]%\noindent%
-%\emph{Замечание~$\thecomm$.}}{\par\normalsize}
+\def\theequation{\textsf{\magenta\arabic{equation}}}
 
 \theoremstyle{remark}%
 \newtheorem{comm}{%\ifx\pdfoutput\undefined\blue\else\yellow\fi
-\indent \iflanguage{russian}{Замечание}{Remark}~~\ignorespaces}
+\indent\blue
+\textup{\iflanguage{russian}{З\,\,\,а\,\,\,м\,\,\,е\,\,\,ч\,\,\,а\,\,\,н\,\,\,и\,\,\,е}
+{R\,\,\,e\,\,\,m\,\,\,a\,\,\,r\,\,\,k}}~~\ignorespaces}
 \newenvironment{comment}%
-{\vspace{-1ex}\par\smaller[0.5]\begin{comm}}{\end{comm}\vspace{-1ex}}
+{\smaller[1]\begin{comm}}{\end{comm}}
 
-\def\zf{{\smaller[1]ZF}}
 \def\tildeH{%
-\skew{17}\widetilde{\hbox to10pt{$\scr H$}}\hspace{3.8pt}}
+	\skew{17}\widetilde{\hbox to10pt{$\scr H$}}\hspace{3.8pt}}
 \def\tildeL{%
-\skew{9}\widetilde{\hbox to10pt{$\scr L$}}\hspace{1.7pt}}
-\def\boe{\mathbf{e}}
-\def\scalar#1#2{%
-\mbig[1](\mkern-10mu\mbig[1](#1\mkern2mu{,}\mkern2mu#2\mbig[1])%
-\mkern-10mu\mbig[1])}
-\def\vacuum{\ket{\vcenter{\hbox{\tiny$\bigcirc$}}}}
+	\skew{9}\widetilde{\hbox to10pt{$\scr L$}}\hspace{1.7pt}}
+\def\scalar#1#2{(\mkern-5mu(#1\mkern1mu,\mkern1mu#2)\mkern-5mu)}
 
-\def\boT{{\frak T}}
-\def\Aleph{\oper[-3]{\bo\aleph}}
-\def\SL{\textup{\texttt{Stat\-Length}}}
+\newcommand{\brak}[3][|]{\hbox to0ex{$\langle$}\mkern2mu\langle#2%
+	\mkern1mu{#1}\mkern1mu#3\hbox to0ex{$\rangle$}\mkern2mu\rangle}
+\def\vacuum{\ket{{}\vcenter{\hbox{\tiny$\bigcirc$}}}}
+%
+\newcommand{\TRANS}[2][2]{\mathrel{\Over[1]{#2}
+	{\REPEAT{\mathchar"439\mkern-1mu}{#1}\mkern-7mu\leadsto}}}
+\newcommand{\GOTO}[2][2]{\mathrel{
+	\Over[1]{#2}{\REPEAT{\mathchar"439}{#1} \mathchar"044B}}}
 
-\def\+{\mathbin{\hbox to0ex{\kern0.05556em\Under[-0.1]%
-{\phantom{\mkern-2mu+}}}\raise0.1ex\hbox{$+$}}}
-% ВЕРСИЯ \overset{\smash[b]{\sss\smallfrown}}+
-\def\Uplus{\mathbin{\hbox to0ex{%
-$\mkern2.5mu\overset{\sss\smallfrown}{\vbox to0.9ex{}}$}+}}
-\def\h+{\mathbin{\hat+}}
+\def\Tplus{\mathbin{\Over [1.3]{\sss\smallfrown}{+}}}
+\def\Uplus{\mathbin{\Under[0.8]{\ds\smash\smallsmile}{+}}}
+\def\+{\mathbin{\hat+}}
+\def\tplus{\ensuremath{\mathbin{
+	\vcenter{\hbox{\larger\usefont{OT1}{pxtt}{m}{n}+}}}}}
+\def\Approx{\mathrel{\setbox0=\hbox{$\sim$}
+	\rlap{\copy0} \rlap{\raise0.4ex\copy0} \lower0.4ex\box0}}
 
-\def\Approx{\mathrel{\raisebox{-0.2ex}{%
-$\mkern-1mu\smash{\smallmatrix\ds\sim\\[-0.9ex]\ds\sim\\[-0.9ex]
-\ds\sim\endsmallmatrix}\mkern-1mu$}}}
-
-\newcommand{\TRANS}[2][2]{%
-\mathrel{\mathop{{\mathrel{%
-\REPEAT{\mathchar"439\mkern-1mu}{#1}\mkern-7mu\rightsquigarrow}}}%
-\limits^{\raise-1ex\hbox{\smash{$#2$}}}}}
-
-\newcommand{\GOTO}[2][2]{\mathrel{\mathop{\goto[#1]}%
-\limits^{\raise-1ex\hbox{\smash{$#2$}}}}}
 \newcommand{\DOWN}[1][2]{\rotatebox[origin=cc]{-90}{$\goto[#1]$}}
 \newcommand{\UP}[1][2]{\rotatebox[origin=cc]{90}{$\goto[#1]$}}
 
 \def\ans#1{\{\state{#1}\}}
-\def\state#1{\underline{#1}{}}
+\def\state#1{{\,\underline{\!#1\!}\,}{}}
 \def\ket#1{|\bo#1\rangle}
 \def\bra#1{\langle\bo#1|}
 \def\bet#1{|#1\)}
-\def\smallket#1{{{\sss|}#1{\sss\rangle}}}
+\def\smallket#1{{\sss|\bo#1\rangle}}
 \def\obj#1{\raise0.4ex\hbox{$\sss\mkern-1mu\left\lgroup\right.
-\mkern-4mu$}#1\raise0.4ex\hbox{$\sss\mkern-2.5mu\left.
-\right\rgroup\mkern-4mu$}}
+	\mkern-4mu$}#1\raise0.4ex\hbox{$\sss\mkern-2.5mu\left.
+	\right\rgroup\mkern-4mu$}}
 
-\def\SM{\langle\mkern-5mu\langle\mkern1mu\cal S,\mbf M,\ldots
-\rangle\mkern-5mu\rangle}
-
-\def\statePsi{\state{\Psi}}
-\def\statePhi{\state{\Phi}}
-\def\ansPsi{\ans{\Psi}}
-\def\ketPsi{\ket{\Psi}}
-\def\ketPhi{\ket{\Phi}}
-\def\ketTheta{\ket{\Theta}}
+\def\fr{\mathtt{f\!}}
+\def\zf{{\smaller[1]ZF}}
+\def\boT{{\frak T}}
+\def\Aleph{\oper[-4]{\bo\aleph}}
+\def\SL{\textup{\texttt{Stat\-Length}}}
+%\def\SL{\Courier{Stat\-Length}}
+\def\boe{\mathbf{e}}
+\def\statePsi{\state\Psi}
+\def\statePhi{\state\Phi}
+\def\ansPsi{\ans\Psi}
+\def\ketPsi{\ket\Psi}
+\def\ketPhi{\ket\Phi}
+\def\ketTheta{\ket\Theta}
+\def\SM{\hbox to0ex{$\langle$}\mkern2mu\langle\mkern1mu
+	\cal S,\mbf M,{\ldots}\hbox to0ex{$\rangle$}\mkern2mu\rangle}
 
 \def\hA{\oper[17]{\scr A}}
-\def\hB{\oper[6]{\scr B}}
+\def\hB{\oper[6] {\scr B}}
