--- a/1807.06894/TOC.sty
+++ b/1807.06894/TOC.sty
@@ -1,14 +1,3 @@
-% Не работает в {article}; не понимает \tocsection... Обдумать
-% использовать {amsart}
-
-\def\@dotsep{.8}  % почаще точки в оглавлении ...........
-
-% Позаимствовано из http://tex.stackexchange.com/...
-
-% Исправление в файле amsart.cls
-% в \tableofcontents добавляем точки \dots
-% и выравниваем отступы \subsection ...
-
 \def\@tocline#1#2#3#4#5#6#7{\relax
   \ifnum #1>\c@tocdepth % then omit
   \else
@@ -26,8 +15,8 @@
 	\ifcase #1\or\hskip0em\or\hskip2.3em\or\hskip2em\or\else\hskip3em\fi
 %%%%%%%%
 		#6\nobreak\relax % эта строка была
-% вместо \hfil точки \dotfill уменьшенным размером
 % \hfill\hbox to\@pnumwidth{\@tocpagenum{#7}}\par\nobreak
+% но теперь вместо \hfill вставляем \dotfill уменьшенным размером
 		{\,\,\smaller[3]\dotfill}\hspace{-0.3em}%
 %%%%%%%%%%
 		\hbox to\@pnumwidth{\@tocpagenum{#7}}\par\nobreak
