quant-ph-0702225 edits

--- a/quant-ph-0702225/ent-review-last.tex
+++ b/quant-ph-0702225/ent-review-last.tex
@@ -1038,14 +1038,14 @@ private cryptographic key. In this way he discovered entanglement
 based quantum key distribution as opposed to the original BB84 scheme
 which uses directly quantum communication.  The essence of the
 protocol is as follows: Alice and Bob can obtain from a source the EPR
-pairs.  Measuring them in basis $\{|0\>,|1\>\}$, Alice and Bob obtain
+pairs.  Measuring them in the basis $\{|0\>,|1\>\}$, Alice and Bob obtain
 string of perfectly (anti)correlated bits, i.e. the key. To verify
-whether it is secure, they check Bell inequalities on selected portion
+whether it is secure, they check the Bell inequalities on a selected portion
 of pairs.  Roughly speaking, if Eve knew the values that Alice and Bob
-obtain in measurement, this would mean that the values exist before
+would obtain in their measurement, this would mean that the values exist before
 the measurement, hence Bell's inequalities would not be
 violated. Therefore, if Bell inequalities are violated, the values do
-not exist before Alice and Bob measurement, so it looks like nobody
+not exist before Alice and Bob's measurement, so it looks like nobody
 can know them.\footnote{ In fact, the argument is more subtle. This is
   because in principle the values which did not preexist could come to
   exist in a way that is immediately available to a third party - Eve,
@@ -1056,22 +1056,23 @@ can know them.\footnote{ In fact, the argument is more subtle. This is
   argue basing solely on Bell inequalities by means of so called
   monogamy of nonlocal correlations
   \cite{AcinGM-bellqkd,BKP_Bellcrypto,BHK_Bell_key,MW_Bellcrypto}.}
-  First implementations of Ekert's cryptography protocol has been performed
-  using polarization-entangled photons from spontaneous parametric down-conversion \cite {NaikPWBK} and entangled photons in energy-time \cite {TittelBZG}.
+ The first implementations of Ekert’s cryptography protocol were performed 
+ using polarization-entangled photons from spontaneous parametric down-conversion 
+ \cite {NaikPWBK} and photons entangled in energy-time \cite {TittelBZG}.
 
 
 After Ekert's idea, the research in quantum cryptography could have
-taken two paths. One was to treat violation of Bell inequality merely
+taken two paths. One would be to treat violation of Bell inequality merely
 as a confirmation that Alice and Bob share good \eprstates, as put
 forward in \cite{BBM92}, because this is sufficient for privacy: if
 Alice and Bob have true \eprstate, then nobody can know results of
 their measurements. This is what actually happened, for a long time
 only this approach was developed. In this case the eavesdropper Eve
 obeys the rules of quantum mechanics. We discuss it in
-Sec. \ref{sec:Ent_in_QKD}.  The second path was to treat \eprstate\ as
+Sec. \ref{sec:Ent_in_QKD}.  The second path would be to treat \eprstate\ as
 the source of strange correlations that violate Bell inequality (see
 Sec. \ref{sec:Bell}). This leads to new definition of security:
-against eavesdropper who do not have to obey the rules of quantum
+against eavesdroppers who do not have to obey the rules of quantum
 mechanics, but just the no-faster-then-light communication
 principle. The main task of this approach, which is an unconditionally
 secure protocol has been achieved only recently
