--- a/0812.0349/nonloc4.tex
+++ b/0812.0349/nonloc4.tex
@@ -378,26 +378,17 @@ E(a_{1},b_{1})-E(a_{1},b_{2}) & =%
 \end{equation}
 The key step, which allows the introduction of $E(a_{2},b_{2})$ and
 $E(a_{2},b_{1})$, involves expanding this as
-\begin{equation}
-E(a_{1},b_{1})-E(a_{1},b_{2})=%
-\begin{array}
-[c]{c}%
-%TCIMACRO{\dsum \limits_{\lambda}}%
-%BeginExpansion
+\begin{align}
+E(a_{1},b_{1})-E(a_{1},b_{2}) &=
 {\displaystyle\sum\limits_{\lambda}}
-%EndExpansion
 \bar{A}(a_{1},\lambda)\bar{B}(b_{1},\lambda)P(\lambda)(1\pm\bar{A}%
-(a_{2},\lambda)\bar{B}(b_{2},\lambda))\\
--%
-%TCIMACRO{\dsum \limits_{\lambda}}%
-%BeginExpansion
+(a_{2},\lambda)\bar{B}(b_{2},\lambda))\nonumber \\
+& \quad - 
 {\displaystyle\sum\limits_{\lambda}}
-%EndExpansion
 \bar{A}(a_{1},\lambda)\bar{B}(b_{2},\lambda)P(\lambda)(1\pm\bar{A}%
 (a_{2},\lambda)\bar{B}(b_{1},\lambda))\text{ .}%
-\end{array}
 \label{CHSH1b}%
-\end{equation}
+\end{align}
 This then leads to (\ref{CHSH}) via rearrangement of terms and manipulation
 using the relations $\left\vert x\right\vert \left\vert y\right\vert
 =\left\vert xy\right\vert $ and $\left\vert x+y\right\vert \leq\left\vert
@@ -405,30 +396,18 @@ x\right\vert +\left\vert y\right\vert $. For our purposes, though, the crucial
 step is (\ref{CHSH1a}), in which essential use is made of \emph{SI}. If we
 were not to assume \emph{SI}, then (\ref{CHSH1a}) would revert to
 (\ref{CHSH1}) and we would have to rewrite (\ref{CHSH1b}) as
-\begin{equation}
+\begin{align}
 E(a_{1},b_{1})-E(a_{1},b_{2})%
-%TCIMACRO{\TeXButton{TeX field}{\stackrel{_?}{=}}}%
-%BeginExpansion
-\stackrel{_?}{=}%
-%EndExpansion%
-\begin{array}
-[c]{c}%
-%TCIMACRO{\dsum \limits_{\lambda}}%
-%BeginExpansion
+& \stackrel{_?}{=} %
 {\displaystyle\sum\limits_{\lambda}}
-%EndExpansion
 \bar{A}(a_{1},\lambda)\bar{B}(b_{1},\lambda)P(\lambda|a_{1},b_{1})(1\pm\bar
-{A}(a_{2},\lambda)\bar{B}(b_{2},\lambda))\\
--%
-%TCIMACRO{\dsum \limits_{\lambda}}%
-%BeginExpansion
+{A}(a_{2},\lambda)\bar{B}(b_{2},\lambda))\nonumber\\
+& \quad - 
 {\displaystyle\sum\limits_{\lambda}}
-%EndExpansion
 \bar{A}(a_{1},\lambda)\bar{B}(b_{2},\lambda)P(\lambda|a_{1},b_{2})(1\pm\bar
 {A}(a_{2},\lambda)\bar{B}(b_{1},\lambda))
-\end{array}
 \label{CHSH2b}%
-\end{equation}
+\end{align}
 which is simply \emph{invalid}, since the new terms need not sum to zero
 anymore. Nor, for that matter, would they correspond to the desired
 $E(a_{2},b_{2})$ and $E(a_{2},b_{1})$. Thus without appeal to \emph{SI}, there
@@ -760,13 +739,13 @@ The difference between this constraint and the gauge-theoretic constraint is
 that the former is nonlocal while the latter is local. \ Specifically, the
 Cauchy data is given by functions $f$ and $g$ such that
 \begin{align}
-f(x_{1},t)  &  :=\phi(x_{1},0,t)=%
+f(x_{1},t)  &  :=\phi(x_{1},0,t) = %
 %TCIMACRO{\dint \limits_{k_{1}^{2}\geq\omega^{2}}}%
 %BeginExpansion
 {\displaystyle\int\limits_{k_{1}^{2}\geq\omega^{2}}}
 %EndExpansion
 \tilde{f}(k_{1},\omega)e^{i(k_{1}x_{1}-\omega t)}dk_{1}d\omega\\
-g(x_{1},t)  &  :=\frac{\partial\phi(x_{1},0,t)}{\partial x_{2}}=%
+g(x_{1},t)  &  :=\frac{\partial\phi(x_{1},0,t)}{\partial x_{2}} = %
 %TCIMACRO{\dint \limits_{k_{1}^{2}\geq\omega^{2}}}%
 %BeginExpansion
 {\displaystyle\int\limits_{k_{1}^{2}\geq\omega^{2}}}
