--- a/0812.0349/nonloc4.tex
+++ b/0812.0349/nonloc4.tex
@@ -333,7 +333,6 @@ $P(\lambda|a,b)$ with $P(\lambda)$. This is the condition known as
 crucial to the derivation of Bell's result
 
 The Bell-CHSH inequality \cite{CHSH69}, is:%
-
 \begin{equation}
 \left\vert E(a_{1},b_{1})-E(a_{1},b_{2})\right\vert +\left\vert E(a_{2}%
 ,b_{2})+E(a_{2},b_{1})\right\vert \leq2\text{ .} \label{CHSH}%
@@ -341,41 +340,33 @@ The Bell-CHSH inequality \cite{CHSH69}, is:%
 The beginning of the derivation goes as follows. \ First, write down the
 difference between expectation values for pairs of settings $\left\langle
 a_{1},b_{1}\right\rangle $ and $\left\langle a_{1},b_{2}\right\rangle :$%
-\begin{equation}%
-\begin{array}
+\begin{align}%
 [c]{ll}%
 E(a_{1},b_{1})-E(a_{1},b_{2}) & =%
-%TCIMACRO{\dsum \limits_{\lambda}}%
-%BeginExpansion
 {\displaystyle\sum\limits_{\lambda}}
-%EndExpansion
-\bar{A}(a_{1},\lambda)\bar{B}(b_{1},\lambda)P(\lambda|a_{1},b_{1})-%
-%TCIMACRO{\dsum \limits_{\lambda}}%
-%BeginExpansion
+\bar{A}(a_{1},\lambda)\bar{B}(b_{1},\lambda)P(\lambda|a_{1},b_{1})\nonumber\\
+& \quad -%
 {\displaystyle\sum\limits_{\lambda}}
-%EndExpansion
 \bar{A}(a_{1},\lambda)\bar{B}(b_{2},\lambda)P(\lambda|a_{1},b_{2})
-\end{array}
 \label{CHSH1}%
-\end{equation}
+\end{align}
 Assuming that \emph{SI} holds, we can rewrite this as%
-\begin{equation}%
-\begin{array}
+\begin{align}%
 [c]{ll}%
-E(a_{1},b_{1})-E(a_{1},b_{2}) & =%
+E(a_{1},b_{1})-E(a_{1},b_{2})  & =%
 %TCIMACRO{\dsum \limits_{\lambda}}%
 %BeginExpansion
 {\displaystyle\sum\limits_{\lambda}}
 %EndExpansion
-\bar{A}(a_{1},\lambda)\bar{B}(b_{1},\lambda)P(\lambda)-%
+\bar{A}(a_{1},\lambda)\bar{B}(b_{1},\lambda)P(\lambda)\\
+& \quad -%
 %TCIMACRO{\dsum \limits_{\lambda}}%
 %BeginExpansion
 {\displaystyle\sum\limits_{\lambda}}
 %EndExpansion
 \bar{A}(a_{1},\lambda)\bar{B}(b_{2},\lambda)P(\lambda)
-\end{array}
 \label{CHSH1a}%
-\end{equation}
+\end{align}
 The key step, which allows the introduction of $E(a_{2},b_{2})$ and
 $E(a_{2},b_{1})$, involves expanding this as
 \begin{align}
@@ -396,18 +387,18 @@ x\right\vert +\left\vert y\right\vert $. For our purposes, though, the crucial
 step is (\ref{CHSH1a}), in which essential use is made of \emph{SI}. If we
 were not to assume \emph{SI}, then (\ref{CHSH1a}) would revert to
 (\ref{CHSH1}) and we would have to rewrite (\ref{CHSH1b}) as
-\begin{align}
+\begin{multline}
 E(a_{1},b_{1})-E(a_{1},b_{2})%
-& \stackrel{_?}{=} %
+\stackrel{_?}{=} %
 {\displaystyle\sum\limits_{\lambda}}
 \bar{A}(a_{1},\lambda)\bar{B}(b_{1},\lambda)P(\lambda|a_{1},b_{1})(1\pm\bar
-{A}(a_{2},\lambda)\bar{B}(b_{2},\lambda))\nonumber\\
-& \quad - 
+{A}(a_{2},\lambda)\bar{B}(b_{2},\lambda))\\
+- 
 {\displaystyle\sum\limits_{\lambda}}
 \bar{A}(a_{1},\lambda)\bar{B}(b_{2},\lambda)P(\lambda|a_{1},b_{2})(1\pm\bar
 {A}(a_{2},\lambda)\bar{B}(b_{1},\lambda))
 \label{CHSH2b}%
-\end{align}
+\end{multline}
 which is simply \emph{invalid}, since the new terms need not sum to zero
 anymore. Nor, for that matter, would they correspond to the desired
 $E(a_{2},b_{2})$ and $E(a_{2},b_{1})$. Thus without appeal to \emph{SI}, there
