--- a/1906.04313/BellPaperRevision.tex
+++ b/1906.04313/BellPaperRevision.tex
@@ -38,14 +38,14 @@ bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
 \linespread{1.05}
-\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
 \sloppy
-
+\raggedbottom
+\pagestyle{plain}
 % these include amsmath and that can cause trouble in older docs.
-\input{../helpers/mnsymbol.tex}
 \input{../helpers/fix-underbrace.tex}
 
-\usepackage[small]{titlesec}
+\usepackage{microtype}
 
 %\usepackage[dotinlabels]{titletoc}
 %\titlelabel{{\thetitle}.\quad}
