--- a/2010.01324/super_fine05b-psu.tex
+++ b/2010.01324/super_fine05b-psu.tex
@@ -510,15 +510,15 @@ at least does no harm.
 I seem to know a lot of people who are sold on this interventionist notion of causality, so let me add that I am
 sure it is good for something, but whatever that something is, analyzing models in the foundations
 of physics isn't it.\footnote{Tim Palmer wants to write a paper about this but he doesn't yet know it.} Case in
-point: The authors of \ref{finetuning} define superdeterminism as a model in which ``the settings are not free but are
+point: The authors of \cite{finetuning} define superdeterminism as a model in which ``the settings are not free but are
 causally influenced by other variables'', using the interventionist notion of ``causal'' but then define retrocausation as
 ``the possibility of causal influences that act in a direction contrary to the standard arrow
 of time'', ie explicitly using the space-time notion of causality. They thus leave out the option that the model may
 be space-time causal but interventionist retrocausal, which happens to be the case discussed here. 
 
-To be fair, this doesn't really matter for the argument of \ref{finetuning} which could well have included the
+To be fair, this doesn't really matter for the argument of \cite{finetuning} which could well have included the
 case discussed here. I am just picking on this to highlight that it's a bad idea to mix up two different
-notions of causality. Before I explain what the real problem is with the argument of \ref{finetuning}, 
+notions of causality. Before I explain what the real problem is with the argument of \cite{finetuning}, 
 first let me say some more about future-input dependence. 
 
 Future-input dependence is a term coined in \cite{Wharton} to describe retrocausality when using the interventionist notion
