--- a/1208.4119/Wood-Spekkens-arxivV2-241127.tex
+++ b/1208.4119/Wood-Spekkens-arxivV2-241127.tex
@@ -1,4 +1,4 @@
-\documentclass[letterpaper,onecolumn,nofootinbib]{revtex4}
+\documentclass[12pt,onecolumn,nofootinbib]{revtex4-2}
 
 
 \usepackage{graphicx}
@@ -12,6 +12,48 @@
 \captionsetup{compatibility=false}
 \usepackage{color}
 \usepackage{comment}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
 \setcounter{MaxMatrixCols}{10}
 %TCIDATA{OutputFilter=LATEX.DLL}
@@ -83,7 +125,7 @@
 \author{Robert W. Spekkens}
 \affiliation{Perimeter Institute for Theoretical Physics, Waterloo, Ontario, Canada N2L
 2Y5}
-\date{\today}
+\date{5 Dec 2014}
 
 
 %===========================================================
@@ -106,6 +148,7 @@ causal parameters.  In particular, we demonstrate the need for such fine-tuning 
 
 \maketitle
 
+\newpage
 
 %===========================================================
 % 		INTRODUCTION
@@ -238,7 +281,7 @@ values of every variable $X$ given its parents $Pa(X)$ in the causal structure, 
 An example of a deterministic causal model is given in Fig.~\ref{fig:detSTAB-graph}.
 
 % FIGURE
-\begin{figure}[htbp]
+\begin{figure}[tbp]
 	\begin{subfigure}[b]{0.2\textwidth}
 		\centering
   		\includegraphics[width=\textwidth]{det-stab-graph}
@@ -270,7 +313,7 @@ then the conditional probabilities in the causal model fold together two differe
 An example of a general causal model is given in Fig.~\ref{fig:STAB-graph}.  It can be obtained from the deterministic causal model of Fig.~\ref{fig:detSTAB-graph} by eliminating the exogenous variables $U$ and $V$. (Note that one need not eliminate \emph{all} exogenous variables from a deterministic causal model to obtain a nondeterministic causal model-- for instance, $S$ and $T$ have not been eliminated in our example.)
 
 % FIGURE
-\begin{figure}[htbp]
+\begin{figure}[tbp]
 	\begin{subfigure}[b]{0.2\textwidth}
 		\centering
   		\includegraphics[width=\textwidth]{stab-graph}
@@ -313,16 +356,17 @@ model predicts that the joint distribution over all the variables should be
 P(X,Y,S,T,W)&=& P\left( W \right) P\left( S\right) P(T)\,P(Y|T,W)\,P(X|Y,S,T,W). \label{eq:exdist}
 \end{eqnarray}
  To see this, it suffices to note that in the deterministic extension of this model, depicted in Fig.~\ref{fig:detSTAB-graph}, we have
-\begin{eqnarray}
-P(X,Y,S,T,W,U,V)&=& P\left(U\right) P\left( V \right) P\left( W \right) P\left( S\right) P(T)\, \delta_{Y,f_Y(T,V,W)} \, \delta_{X,f_X(S,T,Y,U,W)}, \label{eq:exdist}
-\end{eqnarray}
+\begin{multline}
+P(X,Y,S,T,W,U,V) = \\
+P\left(U\right) P\left( V \right) P\left( W \right) P\left( S\right) P(T)\, \delta_{Y,f_Y(T,V,W)} \, \delta_{X,f_X(S,T,Y,U,W)}, \label{eq:exdist}
+\end{multline}
 where $\delta$ denotes the Kronecker delta function, $\delta_{X,Y}=1$ if and only if $X=Y$, and consequently,
 \begin{eqnarray}
 P(X,Y,S,T,W)&=& \sum_{U,V} P\left(U\right) P\left( V \right) P\left( W \right) P\left( S\right) P(T)\, \delta_{Y,f_Y(T,V,W)} \, \delta_{X,f_X(S,T,Y,U,W)}, \nonumber\\
 &=&P\left( W \right) P\left( S\right) P(T)\,P(Y|T,W)\,P(X|Y,S,T,W)\,
 \label{eq:exdist}
 \end{eqnarray}
-where $P(Y|T,W)\equiv \sum_V \delta_{Y,f_Y(T,V,W)} P\left(V\right) $ and $P(X|Y,S,T,W)\equiv \sum_U \delta_{X,f_X(S,T,Y,U,W)} P(U)$.
+where $$P(Y|T,W)\equiv \sum_V \delta_{Y,f_Y(T,V,W)} P\left(V\right) $$ and $$P(X|Y,S,T,W)\equiv \sum_U \delta_{X,f_X(S,T,Y,U,W)} P(U).$$
 \color{black}
 
 In general, a causal model with variables $\mathbf{V}\equiv \{ X_1,\dots,X_n\}$ predicts a joint distribution of the form
