--- a/quant-ph-9906023/quant-ph-9906023.tex
+++ b/quant-ph-9906023/quant-ph-9906023.tex
@@ -1,9 +1,57 @@
-\documentstyle[fleqn]{article}
-\setlength{\textwidth}{160mm}
-\setlength{\textheight}{230mm}            
-\setlength{\topmargin}{-8mm}             
-\setlength{\oddsidemargin}{-1mm}
-\parindent5mm \mathindent5mm
+\documentclass[12pt]{article}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+\usepackage{microtype}
+
+\titleformat{\section}[block]
+  {\fillast}
+  {{\large\bf\thesection. }}
+  {1ex minus .1ex}
+  {\large\bf}
+
+\renewcommand{\thesection}{\Roman{section}} 
+\renewcommand{\thesubsection}{\Roman{subsection}}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
 \def\beq{\begin{equation}}
 \def\eeq{\end{equation}}
@@ -20,20 +68,16 @@
 
 \renewcommand{\thefootnote}{\fnsymbol{footnote}}
 
-\vspace*{\fill}
-\begin{center}
-{\Large {\bf Classical interventions in quantum systems.\medskip 
+\title{Classical interventions in quantum systems:\\ 
+I. The measuring process}
 
-I. The measuring process}}\\[15mm]
+\author{Asher Peres\footnote{E-mail: peres@photon.technion.ac.il} \\
+Department of Physics, Technion\\
+Israel Institute of Technology, Haifa, Israel}
 
-Asher Peres\footnote{E-mail: peres@photon.technion.ac.il} \\[8mm]
-{\sl Department of Physics, Technion---Israel Institute of Technology,
-32\,000 Haifa, Israel}\\[15mm]
+\maketitle
 
-{\bf Abstract}
-
-\end{center}
-
+\begin{abstract}
 The measuring process is an external intervention in the dynamics of a
 quantum system. It involves a unitary interaction of that system with a
 measuring apparatus, a further interaction of both with an unknown
@@ -44,13 +88,16 @@ particular, no ancilla is needed. The final result is represented by a
 completely positive map of the quantum state $\rho$ (possibly with a
 change of the dimensions of $\rho$). A continuous limit of the above
 process leads to Lindblad's equation for the quantum dynamical
-semigroup.\vfill
+semigroup.
+\end{abstract}
+
+\medskip
 
 \noindent PACS numbers: 03.65.Bz, \ 03.67.* \vfill
 
 \noindent Physical Review A {\bf61}, 022116 (2000) \vfill
 
-\newpage \begin{center}{\bf I. INTRODUCTION}\ec
+\section{Introduction}
 
 The measuring process~\cite{vN,WZ} is the interface of the classical and
 quantum worlds. The classical world has a description which may be
@@ -200,7 +247,7 @@ process. This continuous approximation leads to the Lindblad
 equation~\cite{lindblad}, which is derived in a simple and novel way in
 Sect.~V.
 
-\bc {\bf II. THE MEASURING PROCESS}\ec
+\section{The Measuring Process}
 
 The measuring process involves several participants: the physical system
 under study, a measuring apparatus whose states belong to
@@ -355,7 +402,7 @@ $E_\mu$ satisfy
  \delta_{ts}, \eeq
 by virtue of the unitarity property in \Eq{unitU}).
 
-\bc {\bf III. DECOHERENCE}\ec
+\section{Decoherence}
 
 Up to now, the quantum evolution is well defined and it is in principle
 reversible. It would remain so if the macroscopic degrees of freedom of
@@ -603,9 +650,9 @@ in \Eq{noselect}) below. The term ``compound''~\cite{marlow} has been
 proposed for that kind of mixture which is solely due to our ignorance
 of the actual outcome and has no objective nature. Once we have a
 definite outcome $\mu$, the new state is $\rho_\mu$, given by
-\Eq{ArhoA}).\clearpage
+\Eq{ArhoA}).
 
-\bc {\bf IV. KRAUS MATRICES}\ec
+\section{Kraus Matrices}
 
 A special case of Eq.~(\theequation) for square matrices $A_{\mu m}$
 was obtained by Kraus~\cite{Kraus} who sought to find the most general
@@ -827,7 +874,7 @@ different outcomes of the intervention, the result is a continuous
 decoherence of the quantum state~\cite{Zurek}. This issue is discussed
 quantitatively in the next section.
 
-\bc {\bf V. THE LINDBLAD EQUATION}\ec
+\section{The Linblad Equation}
 
 For a complete treatment of the quantum system in its unknown
 environment, we write the Hamiltonian as
@@ -883,7 +930,7 @@ formalism, was published by Bacon {\it et al.\/}~\cite{bacon}. Still
 more recently, Adler sharpened the above heuristic derivation of
 \Eq{QDS}) by using It\^o's stochastic calculus~\cite{adler}.\bigskip
 
-\bc {\bf ACKNOWLEDGMENTS}\ec
+\section*{Acknowledgements}
 
 I am grateful to Chris Fuchs, Ady Mann, Ben Schumacher, Barbara Terhal,
 and Daniel Terno for many helpful comments. This work was supported by
