--- a/2010.01324/super_fine05b-psu.tex
+++ b/2010.01324/super_fine05b-psu.tex
@@ -709,7 +709,7 @@ To summarize this section: A model is finetuned if it lacks explanatory power. T
 \section{Outlook}
 \label{outlook}
 
-The two biggest problem with superdeterminism at the moment are (a) the lack of a generally applicable fundamental theory and (b) the lack of experiment. 
+The two biggest problems with superdeterminism at the moment are (a) the lack of a generally applicable fundamental theory and (b) the lack of experiment. 
 
 The lack of experiment could be remedied with existing technological capacities even in absence of a fully-fledged theory if the quantum foundations community could overcome their obsession with Bell-type tests. Bell-type tests will never allow us to tell superdeterminism apart from quantum mechanics. Instead, we need to look for deviations from Born's rule in small and cold systems \cite{Hossenfelder:2019shy,Hossenfelder:2011ct}. 
 
