--- a/landsman-font-testing/0506082.tex
+++ b/landsman-font-testing/0506082.tex
@@ -20,7 +20,7 @@ bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
 %\usepackage{amssymb}
-\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
 \usepackage[small]{titlesec}
 \usepackage{titletoc}
 \input{../helpers/psu-plain-titles.tex}
