--- a/landsman-font-testing/0506082-charter.tex
+++ b/landsman-font-testing/0506082-charter.tex
@@ -27,7 +27,7 @@ bookmarksopenlevel=10
 \usepackage[charter,vvarbb,scaled=1.05]{newtxmath}
 \usepackage[cal=cm]{mathalfa}
 \linespread{1.05}
-\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=.7in, bottom=1in]{geometry}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
 \tolerance=2000
 \hbadness=2000
