--- a/landsman-font-testing/0506082-lucida.tex
+++ b/landsman-font-testing/0506082-lucida.tex
@@ -25,7 +25,7 @@ bookmarksopenlevel=10
 \usepackage{textcomp}
 \usepackage[altbullet]{lucidabr}
 \linespread{1.1}
-\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=.7in, bottom=1in]{geometry}
 \tolerance=2000
 \hbadness=2000
 \usepackage[small]{titlesec}
