--- a/landsman-font-testing/0506082-pal-fancy.tex
+++ b/landsman-font-testing/0506082-pal-fancy.tex
@@ -25,7 +25,7 @@ bookmarksopenlevel=10
 }
 \usepackage[noBBpl,sc]{mathpazo}
 \linespread{1.1}
-\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
 \sloppy
 \raggedbottom
 \pagestyle{plain}
