--- a/yoneda-speedrun/yoneda-speedrun.tex
+++ b/yoneda-speedrun/yoneda-speedrun.tex
@@ -119,7 +119,7 @@ menucolor=blue,linktocpage=true]{hyperref}
 
 \begin{document}
 
-\title{\large A Yoneda Speedrun}
+\title{A Yoneda Speedrun}
 \author{\large Pete Su}
 \date{\normalsize 2021-10-30}
 
