--- a/landsman-font-testing/0506082-lucida.tex
+++ b/landsman-font-testing/0506082-lucida.tex
@@ -37,6 +37,7 @@ bookmarksopenlevel=10
 \DeclareSymbolFont{greekletters}{OML}{zplm}{m}{it}
 \DeclareMathSymbol{\varphi}{\mathord}{greekletters}{"27}
 
+\input{../helpers/cmrsum}
 \input{../helpers/fix-underbrace.tex}
 
 
