--- a/landsman-font-testing/0506082-lucida.tex
+++ b/landsman-font-testing/0506082-lucida.tex
@@ -24,6 +24,8 @@ bookmarksopenlevel=10
 \usepackage[T1]{fontenc}
 \usepackage{textcomp}
 \usepackage[altbullet]{lucidabr}
+\usepackage{eulervm}
+
 \linespread{1.1}
 \usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=.7in, bottom=1in]{geometry}
 \tolerance=2000
@@ -34,8 +36,8 @@ bookmarksopenlevel=10
 %\usepackage[letterpaper, margin=1.2in]{geometry}
 
 % the lucida varphi is hideous
-\DeclareSymbolFont{greekletters}{OML}{zplm}{m}{it}
-\DeclareMathSymbol{\varphi}{\mathord}{greekletters}{"27}
+%\DeclareSymbolFont{greekletters}{OML}{zplm}{m}{it}
+%\DeclareMathSymbol{\varphi}{\mathord}{greekletters}{"27}
 
 \input{../helpers/cmrsum}
 \input{../helpers/fix-underbrace.tex}
