--- a/landsman-font-testing/0506082-pal-e.tex
+++ b/landsman-font-testing/0506082-pal-e.tex
@@ -23,7 +23,7 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-\usepackage[adobe-utopia]{mathdesign}
+\usepackage[noBBpl,sc]{mathpazo}
 \usepackage{eulervm}
 
 \linespread{1.1}
@@ -40,7 +40,7 @@ bookmarksopenlevel=10
 \usepackage{titletoc}
 \input{../helpers/psu-plain-titles.tex}
 
-%\input{../helpers/cmrsum}
+\input{../helpers/cmrsum}
 \input{../helpers/fix-underbrace.tex}
 
 %\input{../helpers/psu-sc-headers.tex}
