adjust euler and lucida again

--- a/landsman-font-testing/0506082-lucida.tex
+++ b/landsman-font-testing/0506082-lucida.tex
@@ -24,6 +24,7 @@ bookmarksopenlevel=10
 \usepackage[T1]{fontenc}
 \usepackage{textcomp}
 \usepackage[altbullet]{lucidabr}
+\usepackage{eulervm}
 
 \linespread{1.1}
 \usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=.7in, bottom=1in]{geometry}
