--- a/math-ph-0405065/math-ph-0405065-psu.tex
+++ b/math-ph-0405065/math-ph-0405065-psu.tex
@@ -19,8 +19,9 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
+%\usepackage[noBBpl,sc]{mathpazo}
 \usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.7in]{geometry}
-\linespread{1.05}
+\linespread{1.1}
 \sloppy
 \raggedbottom
 \pagestyle{plain}
