--- a/yoneda-speedrun/yoneda-speedrun.tex
+++ b/yoneda-speedrun/yoneda-speedrun.tex
@@ -141,7 +141,8 @@ Let $\CC$ be a locally small category. Let $X$ be an object of $\CC$, and let $F
 $$
 \Hom(\CC(X, -),F) \iso FX
 $$
-and this mapping is natural in both $F$ and $X$.
+that associates each natural transformation $\alpha:\CC(X,-) \fto F$ with the element
+$\alpha_X(1_X) \in FX$. Moreover, this correspondence is natural in both $X$ and $F$.
 
 \pg
 But as Sean Carroll famously wrote about general relativity, ``\dots, these statements are
