--- a/scott-identity-1977/scott-main.tex
+++ b/scott-identity-1977/scott-main.tex
@@ -78,7 +78,11 @@
 \newcommand*\bigcdot@[2]{\mathbin{\vcenter{\hbox{\scalebox{#2}{$\m@th#1\bullet$}}}}}
 \makeatother
 
-\title{\large Identity and Existence in Intuitionistic Logic\footnote{This is a retyping of the paper {\it Identity and existence in intuitionistic logic}, by Dana Scott from 1979. The original can be found in: Fourman M., Mulvey C., Scott D. (eds) Applications of Sheaves. Lecture Notes in Mathematics, vol 753. Springer, Berlin, Heidelberg. https://doi-org.cmu.idm.oclc.org/10.1007/BFb0061839. This version was typed out in \LaTeX\ in November of 2021.}
+\title{\large Identity and Existence in Intuitionistic Logic\footnote{This is a retyping of the paper {\it Identity and existence in intuitionistic logic}, by Dana Scott from 1979. The original can be found in: Fourman M., Mulvey C., Scott D. (eds) Applications of Sheaves. Lecture Notes in Mathematics, vol 753. Springer, Berlin, Heidelberg. https://doi-org.cmu.idm.oclc.org/10.1007/BFb0061839. This version was typed out in \LaTeX\ in November of 2021.
+
+{\it Original footnote}: The first draft of this paper was written during a visit on leave at the ETH, ZUrich in March, 1975, and it has been revised since the Durham Symposium.
+The style of formalization was developed in seminars at Oxford starting in 1972/73 . Thanks for contributions and remarks are owed to D. van Dalen, M.P. Fourman,
+R. Grayson, J.M.E. Hyland, C. Smorynski, and R. Statman.}
 }
 \author{\normalsize Dana Scott \\
 {\small {\small\it Merton College}, {\small\it Oxford}}}
