--- a/1410.0270/Insight_preprint.tex
+++ b/1410.0270/Insight_preprint.tex
@@ -1,6 +1,6 @@
 \pdfoutput=1
 
-\documentclass[11pt]{article}
+\documentclass[12pt]{article}
 
 \usepackage[utf8]{inputenc}
 \usepackage[papersize={6.7in, 11.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
@@ -230,7 +230,7 @@ The particles therefore start out in rather mixed states, requiring near-field i
 {\bf Box 1---Measuring macroscopicity}
 \medskip
 
-\small
+\footnotesize
 
 How can one compare different experimental approaches for establishing large mechanical superposition states?
 Various measures are on offer for attributing a size to a given state
@@ -249,7 +249,7 @@ like a wave for longer than $10^{\mu}$ seconds\cite{Nimmrichter2013}.
 due to the small electron mass and coherence time. It would be much higher in a hypothetical large SQUID with a length of 20\,mm and 1\,ms coherence time. For the oscillating micromembrane we assume that the device from Ref. \citen{Teufel2011_long} can be kept in a superposition of the zero- and  and one-phonon state for 1000 oscillation periods.
 
 \centerline{
-\includegraphics[width=0.7\textwidth]{FigB.pdf}}
+\includegraphics[height=2.5in]{FigB.pdf}}
 {\small\noindent
 {Figure B1---Macroscopicities of different superposition experiments}
 Macroscopicities $\mu$ reached in past experiments (top) and proposed tests (bottom) of the superpostion principle  as evaluated in Ref. \citen{Nimmrichter2013}.
